# GodUploader-graphql

./: .editorconfig  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  docker-compose.yml  ghtkn.yaml  workspace.code-workspace
api/: .env.test  .gitignore  Dockerfile  alembic.ini  pyproject.toml  pytest.ini  schema.sql
api/script/: 20220407_drop_fk_artwork_top_illust_id.sql  copy_data_from_old_goduploader.py  docker-main.sh  dump_create_table_sql.py  freeze_edit_for_nsfw_tags.py  freeze_edit_for_tegaki_du.py  generate_webp.py  init.py  init_db.sh  main.py  migrate.py  passenger_wsgi.py  prepare_unknown_user.py  remove_nsfw_tag_from_artwork.py  sync_tag_to_rating.py  wait-for-it.sh
api/script/example/: upload_via_api.py
api/script/obsolete/: freeze_edit_for_nsfw_tags.py  init.py
api/src/: main.py  web.py
api/src/goduploader/: .gitignore  config.py  dataloader.py  db.py  generate_webp.py  graphql.py  gyazo.py  main.py  model.py  schema.py  slack.py  tag.py  thumbnail.py  util.py  viewer.py  web.py
api/src/goduploader/external_service/: gyazo.py  slack.py  twitter.py
api/src/goduploader/graphql/: dataloader.py  middleware.py  schema.py
api/src/goduploader/image/: thumbnail.py  webp.py
api/src/goduploader/model/: __init__.py  account.py  artwork.py  comment.py  illust.py  like.py  relation.py  tag.py
api/src/goduploader/script/: create_schema.py  migrate.py
api/src/migration/: env.py
api/src/migration/versions/: 129b4ef74f51_make_artwork_nsfw_nullable.py  188089f51a9a_init.py  1e9c2183f516_init.py  2edbad656d43_add_tag_edit_freezed_column.py  4a57c26b84a9_init.py  4f308d092386_change_tag_name_collation_to_utf8mb4_.py  7fb08ef73cac_init.py  9a509324aa66_reset.py  (+6 more)
api/src/script/: create_schema.py  migrate.py
api/tests/: conftest.py  fixtures.yml  httpmock.py  prepare.py  test_config.py  test_goduploader.py  test_tag.py  test_util.py  test_web.py  util.py
api/tests/graphql/: test_account_type.py  test_artwork_type.py  test_create_comment.py  test_dataloader.py  test_delete_artwork.py  test_illust_type.py  test_mutation.py  test_query.py  test_update_account.py  test_update_artwork.py  test_update_tag.py  test_upload_artwork.py  test_viewer.py  test_web.py
api/tests/model/: test_account.py  test_artwork.py  test_illust.py  test_tag.py
api/tests/script/: test_remove_nsfw_tag_from_artwork.py  test_sync_tag_to_rating.py
(+294 files in other folders)
