[tool.poetry]
name = "GodUploader"
version = "0.1.0"
description = ""
authors = ["utgwkk <utagawakiki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
SQLAlchemy = "^1.4.14"
graphene-sqlalchemy = "^2.3.0"
Flask-GraphQL = "^2.0.1"
graphene-file-upload = "^1.3.0"
python-gyazo = "^2.1.0"
requests = "^2.25.1"
slack-sdk = "^3.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-dotenv = "^0.5.2"
PyYAML = "^5.4.1"
Faker = "^8.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
