[tool.poetry]
name = "GodUploader"
version = "0.1.0"
description = ""
authors = ["utgwkk <utagawakiki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
SQLAlchemy = "^1.4.14"
graphene-sqlalchemy = "^2.3.0"
Flask-GraphQL = "^2.0.1"
graphene-file-upload = "^1.3.0"
python-gyazo = "^2.1.0"
requests = "^2.31.0"
slack-sdk = "^3.7.0"
cacheout = "^0.13.1"
python-dotenv = "^0.17.1"
alembic = "^1.6.5"
mysql-connector-python = "8.0.30"
tweepy = "^4.8.0"
Pillow = "^10.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-dotenv = "^0.5.2"
Faker = "^8.8.0"
black = "^21.6b0"
pytest-cov = "^2.12.1"
httpretty = "^1.1.4"
pytest-github-actions-annotate-failures = "^0.1.6"

[tool.poetry.group.dev.dependencies]
pyyaml = "^6.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
