[tool.poetry]
name = "GodUploader"
version = "0.1.0"
description = ""
authors = ["utgwkk <utagawakiki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.14"
Flask = "^2.3.2"
SQLAlchemy = "^1.4.14"
graphene-sqlalchemy = "^2.3.0"
Flask-GraphQL = "^2.0.1"
graphene-file-upload = "^1.3.0"
python-gyazo = "^2.1.0"
requests = "^2.32.4"
slack-sdk = "^3.7.0"
cacheout = "^0.13.1"
python-dotenv = "^0.17.1"
tweepy = "^4.16.0"
Pillow = "^12.0.0"
pyuwsgi = "^2.0.30"
standard-imghdr = "^3.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-dotenv = "^0.5.2"
Faker = "^8.8.0"
black = "^24.3"
pytest-cov = "^2.12.1"
httpretty = "^1.1.4"
pytest-github-actions-annotate-failures = "^0.1.6"
pyyaml = "^6.0.1"
mocket = "^3.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
